browser/devtools/markupview/markup-view.css
ul
{
list
-
style
:
none
;
}
ul
.
children
:
not
(
[
expanded
]
)
{
display
:
none
;
}
.
codebox
{
display
:
inline
-
block
;
}
.
newattr
{
display
:
inline
-
block
;
width
:
1em
;
height
:
1ex
;
}
.
summary
{
cursor
:
pointer
;
}
.
summary
[
expanded
]
{
display
:
none
;
}
#
root
{
margin
-
right
:
80px
;
}
#
previewbar
{
position
:
fixed
;
top
:
0
;
right
:
0
;
width
:
90px
;
background
:
black
;
border
-
left
:
1px
solid
#
333
;
border
-
bottom
:
1px
solid
#
333
;
overflow
:
hidden
;
}
#
preview
{
position
:
absolute
;
top
:
0
;
right
:
5px
;
width
:
80px
;
height
:
100
%
;
background
-
image
:
-
moz
-
element
(
#
root
)
;
background
-
repeat
:
no
-
repeat
;
}
#
previewbar
.
hide
#
previewbar
.
disabled
{
display
:
none
;
}
#
viewbox
{
position
:
absolute
;
top
:
0
;
right
:
5px
;
width
:
80px
;
border
:
1px
dashed
#
888
;
background
:
rgba
(
205
205
255
0
.
2
)
;
outline
:
1px
solid
transparent
;
}

