Bug 796069 - [markup panel] gap space before closing bracket is distracting. r=harth
UltraBlame original commit: c3f39498c164aa4a7c911dd5e0c3178464766cee

--- a/browser/devtools/markupview/markup-view.css
+++ b/browser/devtools/markupview/markup-view.css
@@ -50,6 +50,37 @@ height
 :
 1ex
 ;
+margin
+-
+right
+:
+-
+1em
+;
+}
+.
+newattr
+:
+focus
+{
+margin
+-
+right
+:
+0
+;
+}
+.
+closing
+-
+bracket
+{
+pointer
+-
+events
+:
+none
+;
 }
 .
 summary
@@ -68,16 +99,6 @@ expanded
 display
 :
 none
-;
-}
-#
-root
-{
-margin
--
-right
-:
-80px
 ;
 }
 #
